Fix: scrolling going off screen

--- a/client/src/components/programs/EditProgram.css
+++ b/client/src/components/programs/EditProgram.css
@@ -182,7 +182,8 @@ button#save {
 
 #instructorTags, #payeeTags, #emailTags {
   position: absolute;
-  height: 2rem;
+  overflow-y: scroll;
+  height: 120%;
   width: 73%;
   left: 0;
   top: 0;
@@ -190,6 +191,11 @@ button#save {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding-bottom: 8px;
+}
+
+#instructorTags.scrollable, #payeeTags.scrollable, #emailTags.scrollable {
+  box-shadow: inset 0 -8px 8px -8px rgba(0, 0, 0, 0.2);
 }
 
 .instructorTag, .payeeTag, .emailTag {
